--- a/CSS/politica.css
+++ b/CSS/politica.css
@@ -1,6 +1,6 @@
 body{
     background-size: cover;
-    width: 100vw;
+    /* width: 100vw;  */
     background: linear-gradient(to left,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%)
 }
 
@@ -16,20 +16,20 @@ body{
 
 
 .Imagine{
-    max-height: 60vh;
+    max-height: 70vh;
     background-color: aliceblue;
 }
 
 .Imagine img{
     padding: 10px;
-    height: 60vh;
+    height: 70vh;
 }
 .continut_text{
     background-color: aliceblue;
     max-width: 50vw;
     padding: 10px;
     width: 50vw;
-    height: 60vh;
+
 }
 .Sectiune{
     font-weight:bold;
@@ -40,6 +40,10 @@ body{
     margin-bottom: 20px;
 }
 .parte{
+    max-width: 80vw;
+    height: auto;
     margin-bottom: 5vh;
     display: flex;
+    background-color: aliceblue;
+
 }
